Expense-tracking-backend/user-service/k8s/40-user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service
  namespace: expense
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: user.local.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 6001
